fixed layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,13 +13,13 @@
 }
 
 * {
-  cursor: none;
+  /* cursor: none; */
   user-select: none;
   -moz-user-select: none;
 }
 
 *:hover, *:focus, *:active {
-  cursor: none;
+  /* cursor: none; */
 }
 
 @theme inline {
